unpackaged/main/default/objects/Trigger_Execute__c/Trigger_Execute__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Trigger Execute</label>
</CustomObject>