unpackaged/main/default/objects/Trigger_Execute__c/fields/Enable_del__c.field-meta.xml
<CustomField>
    <fullName>Enable_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable del</label>
    <type>Checkbox</type>
</CustomField>