unpackaged/main/default/objects/Trigger_Execute__c/fields/IsTrackingEnable__c.field-meta.xml
<CustomField>
    <fullName>IsTrackingEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrackingEnable</label>
    <type>Checkbox</type>
</CustomField>