unpackaged/main/default/objects/Trigger_Execute__c/fields/Sub_Enable__c.field-meta.xml
<CustomField>
    <fullName>Sub_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Enable</label>
    <type>Checkbox</type>
</CustomField>